# sudoku

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build_opencv_linux.sh  build_opencv_windows.ps1  cell_detection.cc  cell_detection.h  cell_detection_test.cc  digit_detector.cc  digit_detector.h  digit_detector_test.cc  hello_tesseract_test.cc  install_teseract.sh  link_opencv_linux.sh  link_opencv_windows.ps1  link_teseract.sh  solver_main.cc  tesseract_helpers.cc  tesseract_helpers.h
solver/: BUILD.bazel  solver.cc  solver.h  solver_test.cc
testdata/: BUILD.bazel
training/: BUILD.bazel  download_mnist.py  requirements.txt  train_main.cc
