load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

# bazel run //:buildifier
# .. or warn
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

cc_library(
    name = "opencv_release",
    srcs = select({
        "@platforms//os:linux": glob(
            ["third_party/opencv/lib/*.so*"],
            allow_empty = True,
        ),
        "@platforms//os:macos": glob(
            ["third_party/opencv/lib/*.dylib"],
            allow_empty = True,
        ),
        "@platforms//os:windows": glob(
            [
                "third_party/opencv/release/x64/vc17/lib/*.lib",
                "third_party/opencv/release/x64/vc17/bin/*.dll",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(
        ["third_party/opencv/include/**/*"],
        allow_empty = True,
    ),
    includes = ["third_party/opencv/include"],
)

cc_library(
    name = "opencv_debug",
    srcs = select({
        "@platforms//os:linux": glob(
            ["third_party/opencv/lib_debug/*.so*"],
            allow_empty = True,
        ),
        "@platforms//os:macos": glob(
            ["third_party/opencv/lib_debug/*.dylib"],
            allow_empty = True,
        ),
        "@platforms//os:windows": glob(
            [
                "third_party/opencv/debug/x64/vc17/lib/*.lib",
                "third_party/opencv/debug/x64/vc17/bin/*.dll",
            ],
            allow_empty = True,
        ),
    }),
    hdrs = glob(
        ["third_party/opencv/include_debug/**/*"],
        allow_empty = True,
    ),
    includes = ["third_party/opencv/include_debug"],
)

config_setting(
    name = "debug_build",
    values = {"compilation_mode": "dbg"},
)

cc_library(
    name = "opencv",
    visibility = ["//visibility:public"],
    deps = select({
        ":debug_build": [":opencv_release"],
        "//conditions:default": [":opencv_release"],
    }),
)

cc_library(
    name = "cell_detection",
    srcs = ["cell_detection.cc"],
    hdrs = ["cell_detection.h"],
    deps = ["//:opencv"],
)

cc_test(
    name = "cell_detection_test",
    srcs = ["cell_detection_test.cc"],
    data = ["//:testdata"],
    deps = [
        ":cell_detection",
        "//:opencv",
        "@absl//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "digit_detector",
    srcs = ["digit_detector.cc"],
    hdrs = ["digit_detector.h"],
    deps = [
        "//:opencv",
        "@absl//absl/strings",
        "@absl//absl/types:optional",
        "@glog",
    ],
)

cc_test(
    name = "digit_detector_test",
    srcs = ["digit_detector_test.cc"],
    data = [
        "model.yml",
        "//:testdata",
    ],
    deps = [
        ":cell_detection",
        ":digit_detector",
        "//:opencv",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "solver_main",
    testonly = 1,
    srcs = ["solver_main.cc"],
    data = [
        "model.yml",
        "//testdata",
    ],
    deps = [
        ":cell_detection",
        ":digit_detector",
        "//:opencv",
        "//solver",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@gflags",
        "@glog",
    ],
)
